[package]
name = "net_sentinel"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
anyhow = "1.0"
thiserror = "1.0"
reqwest = { version = "0.12", features = [] }
futures = "0.3"
hex = "0.4"
indexmap = "2.0"
colored = "2.0"
